--- a/app/src/main/res/layout/row_mechanic.xml
+++ b/app/src/main/res/layout/row_mechanic.xml
@@ -35,84 +35,81 @@
                 android:id="@+id/mechanicImageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginBottom="@dimen/loginViewsMargin"
                 android:scaleType="centerCrop"
                 android:src="@drawable/profile_def_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearance="@style/circle" />
 
-            <LinearLayout
-                android:id="@+id/ll"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/txtMechanicName"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginTop="35dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:text="Name"
+                android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintEnd_toStartOf="@id/callMechanicButton"
-                app:layout_constraintHorizontal_bias="0.3"
                 app:layout_constraintStart_toEndOf="@id/mechanicImageView"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/txtMechanicName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:text="Name"
-                    android:textColor="@color/colorPrimaryDark" />
 
-                <!--        <TextView-->
-                <!--            android:id="@+id/txtLocation"-->
-                <!--            android:layout_width="wrap_content"-->
-                <!--            android:layout_height="wrap_content"-->
-                <!--            android:layout_marginTop="@dimen/loginViewsMargin"-->
-                <!--            android:text="Location"-->
-                <!--            android:textColor="@color/colorPrimaryDark" />-->
-
-                <TextView
-                    android:id="@+id/txtMechanicSpecialization"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:text="Specialization"
-                    android:textColor="@color/colorPrimaryDark" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/txtMechanicSpecialization"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginEnd="15dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Specialization"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toStartOf="@id/callMechanicButton"
+                app:layout_constraintStart_toEndOf="@id/mechanicImageView"
+                app:layout_constraintBottom_toBottomOf="@id/mechanicImageView"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/callMechanicButton"
                 style="@style/circleButton"
                 android:layout_width="49dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginEnd="20dp"
                 android:drawableStart="@drawable/ic_call"
-                app:layout_constraintEnd_toStartOf="@+id/locationMechanicButton"
-                app:layout_constraintStart_toEndOf="@id/ll"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/txtMechanicName"
+                app:layout_constraintEnd_toStartOf="@id/locationMechanicButton"/>
 
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/locationMechanicButton"
                 style="@style/circleButton"
                 android:layout_width="49dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="30dp"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginEnd="10dp"
                 android:drawableStart="@drawable/location_icon"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBaseline_toBaselineOf="@id/callMechanicButton"
                 app:layout_constraintStart_toEndOf="@id/callMechanicButton"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/rateMechanicButton"
                 style="@style/circleButton"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="10dp"
-                android:drawableLeft="@drawable/star_rate_icon"
+                android:drawableStart="@drawable/star_rate_icon"
                 android:text="5/5"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/mechanicImageView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/ll"
+                app:layout_constraintStart_toEndOf="@id/txtMechanicSpecialization"
                 app:layout_constraintTop_toBottomOf="@id/locationMechanicButton" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
