--- a/app/src/main/res/layout/row_mechanic.xml
+++ b/app/src/main/res/layout/row_mechanic.xml
@@ -95,7 +95,8 @@
                 android:layout_width="49dp"
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginEnd="10dp"
-                android:drawableStart="@drawable/location_icon"
+                android:paddingEnd="9dp"
+                android:drawableEnd="@drawable/location_icon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBaseline_toBaselineOf="@id/callMechanicButton"
                 app:layout_constraintStart_toEndOf="@id/callMechanicButton"
