--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -155,13 +155,12 @@
 
                     <TextView
                         android:id="@+id/emailtext"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:text="test@example.com"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
-                        app:layout_constraintEnd_toStartOf="@id/gl2"
                         app:layout_constraintBaseline_toBaselineOf="@+id/email"
                         app:layout_constraintStart_toEndOf="@+id/email" />
 
